crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_coverage_all.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
{
  "entities": [
    {
      "declared": true,
      "entity_id": "Payload",
      "evidence_collected": true,
      "exempt": false,
      "kind": "type",
      "linked": true,
      "obligations": 1,
      "proven": 1,
      "status": "covered",
      "unproven": []
    },
    {
      "declared": true,
      "entity_id": "login",
      "evidence_collected": true,
      "exempt": false,
      "kind": "behavior",
      "linked": true,
      "obligations": 1,
      "proven": 1,
      "status": "covered",
      "unproven": []
    },
    {
      "declared": false,
      "entity_id": "logout",
      "evidence_collected": true,
      "exempt": false,
      "kind": "behavior",
      "linked": true,
      "obligations": 0,
      "proven": 0,
      "status": "uncovered",
      "unproven": []
    },
    {
      "declared": true,
      "entity_id": "reset_password",
      "evidence_collected": true,
      "exempt": false,
      "kind": "behavior",
      "linked": true,
      "obligations": 1,
      "proven": 0,
      "status": "uncovered",
      "unproven": [
        "Reset link expires after one hour"
      ]
    }
  ]
}
