crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_coverage_kind_behavior.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
[
  {
    "declared": true,
    "entity_id": "login",
    "evidence_collected": true,
    "kind": "behavior",
    "linked": true,
    "obligations": 1,
    "proven": 1,
    "status": "covered",
    "unproven": []
  },
  {
    "declared": false,
    "entity_id": "logout",
    "evidence_collected": true,
    "kind": "behavior",
    "linked": true,
    "obligations": 0,
    "proven": 0,
    "status": "uncovered",
    "unproven": []
  },
  {
    "declared": true,
    "entity_id": "reset_password",
    "evidence_collected": true,
    "kind": "behavior",
    "linked": true,
    "obligations": 1,
    "proven": 0,
    "status": "uncovered",
    "unproven": [
      "Reset link expires after one hour"
    ]
  }
]
