crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_coverage_status_union.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
[
  {
    "declared": false,
    "entity_id": "Status",
    "evidence_collected": false,
    "kind": "type",
    "linked": false,
    "obligations": 0,
    "proven": 0,
    "status": "uncovered",
    "unproven": []
  }
]
