crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_inspect_payload.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
{
  "contract": null,
  "coverage_status": "covered",
  "declared": true,
  "diagnostics": [
    {
      "code": "W002",
      "message": "type 'Payload' is not referenced by any behavior, port, or type",
      "severity": "Warning",
      "suggestion": null
    }
  ],
  "entity_id": "Payload",
  "fields": {
    "verify": [
      {
        "description": "Payload schema is valid",
        "kind": "unit"
      }
    ]
  },
  "kind": "type",
  "reference_count": 0,
  "referenced_by": [],
  "references": [],
  "refers_to": [],
  "source_span": {
    "end_col": 2,
    "end_line": 21,
    "file": "main.spec",
    "start_col": 1,
    "start_line": 18
  },
  "testable": true,
  "title": "Payload",
  "verify_declarations": [
    "unit Payload schema is valid"
  ]
}
