crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_prompt_review.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
{
  "description": "Analyze coverage gaps for an entity or the whole graph",
  "messages": [
    {
      "content": {
        "text": "Analyze the following coverage report for the entire graph. Identify the highest-priority gaps to address. Focus on entities marked 'uncovered' and unconnected entities that may indicate missing relationships.",
        "type": "text"
      },
      "role": "user"
    },
    {
      "content": {
        "text": "{\"coverage_summary\":[{\"declared\":true,\"entity_id\":\"Payload\",\"evidence_collected\":true,\"exempt\":false,\"kind\":\"type\",\"linked\":true,\"obligations\":1,\"proven\":1,\"status\":\"covered\",\"unproven\":[]},{\"declared\":true,\"entity_id\":\"login\",\"evidence_collected\":true,\"exempt\":false,\"kind\":\"behavior\",\"linked\":true,\"obligations\":1,\"proven\":1,\"status\":\"covered\",\"unproven\":[]},{\"declared\":false,\"entity_id\":\"logout\",\"evidence_collected\":true,\"exempt\":false,\"kind\":\"behavior\",\"linked\":true,\"obligations\":0,\"proven\":0,\"status\":\"uncovered\",\"unproven\":[]},{\"declared\":true,\"entity_id\":\"reset_password\",\"evidence_collected\":true,\"exempt\":false,\"kind\":\"behavior\",\"linked\":true,\"obligations\":1,\"proven\":0,\"status\":\"uncovered\",\"unproven\":[\"Reset link expires after one hour\"]}],\"entity_id\":\"*\",\"findings\":[{\"entity_id\":\"Payload\",\"message\":\"Entity 'Payload' is unconnected: no edge links it to another entity\",\"severity\":\"info\"},{\"entity_id\":\"logout\",\"message\":\"Entity 'logout' has no verify declarations\",\"severity\":\"warning\"},{\"entity_id\":\"logout\",\"message\":\"Entity 'logout' is unconnected: no edge links it to another entity\",\"severity\":\"info\"},{\"entity_id\":\"reset_password\",\"message\":\"Entity 'reset_password' is unconnected: no edge links it to another entity\",\"severity\":\"info\"}]}",
        "type": "text"
      },
      "role": "user"
    }
  ]
}
