crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_prompt_trace_plan.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
{
  "messages": [
    {
      "content": {
        "text": "Trace the dependency chain for the plan. The data below shows all affected entities, unverified entities in the chain, and coverage gaps. Prioritize addressing unverified entities that are on critical paths.",
        "type": "text"
      },
      "role": "user"
    },
    {
      "content": {
        "text": "{\"affected_entities\":[\"login\",\"signin\"],\"coverage_gaps\":[{\"gap_context\":\"E003: unresolved entity 'ghost' in plan — not found in graph\",\"missing_link_type\":\"unresolved_entity\",\"source_entity\":\"plan\",\"target_entity\":\"ghost\"},{\"gap_context\":\"testable entity 'Payload' (type) is not covered by the plan\",\"missing_link_type\":\"missing_plan_entry\",\"source_entity\":\"plan\",\"target_entity\":\"Payload\"},{\"gap_context\":\"testable entity 'reset_password' (behavior) is not covered by the plan\",\"missing_link_type\":\"missing_plan_entry\",\"source_entity\":\"plan\",\"target_entity\":\"reset_password\"}],\"unverified_entities\":[\"signin\"]}",
        "type": "text"
      },
      "role": "assistant"
    }
  ]
}
