crates/specforge-cli/tests/snapshots/tests__read_views__coverage_fx1_query_login.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized(&result, root)"
---
{
  "edges": [
    {
      "label": "features",
      "source": "login",
      "target": "signin"
    }
  ],
  "format_version": "2.0",
  "nodes": [
    {
      "coverage_status": "covered",
      "fields": {
        "contract": "The system MUST let a known user log in",
        "features": [
          "signin"
        ],
        "verify": [
          {
            "description": "a known user logs in",
            "kind": "unit"
          }
        ]
      },
      "file": "main.spec",
      "id": "login",
      "kind": "behavior",
      "line": 1,
      "title": "Log in"
    },
    {
      "coverage_status": "uncovered",
      "fields": {
        "problem": "Users cannot reach their data",
        "solution": "Let them log in"
      },
      "file": "main.spec",
      "id": "signin",
      "kind": "feature",
      "line": 23,
      "title": "Sign in"
    }
  ],
  "schema_ref": {
    "content_hash": "[SHA256]",
    "url": "https://specforge.dev/schema/graph-protocol-v1.0.0.json"
  },
  "schema_version": "1.0.0"
}
