crates/specforge-cli/tests/snapshots/tests__read_views__explore_fx1_human.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized_text(&run.stdout, root)"
---
Selected: 2 entities reached from login
Starting points: login, signin
Most connected:  login (1), signin (1)
Unconnected:     none
Paths from login:
  signin  features
