crates/specforge-cli/tests/snapshots/tests__read_views__infer_guide_fx1_behavior_human.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized_text(&run.stdout, root)"
---
behavior (@specforge/software): A testable unit of system functionality with a defined contract

Fields:
  abstract  bool  -  Marks a specification-only behavior that concrete behaviors refine; it carries no verify obligations of its own
  category  string  -  Classification tag for agent task routing
  consumes  reference_list  -  Events this behavior reacts to
  contract  string  *  The behavioral contract this behavior guarantees
  description  string  -  Human-readable summary of this behavior
  diagnostic  string  -  Diagnostic message for validation tooling
  ensures  reference_list  -  Invariants guaranteed as postconditions after successful execution
  features  reference_list  -  Product features this behavior implements
  invariants  reference_list  -  Invariants this behavior enforces
  maintains  reference_list  -  Invariants preserved throughout execution
  ports  reference_list  -  Port interfaces this behavior interacts with
  produces  reference_list  -  Events produced as a result of this behavior
  refines  reference  -  Abstract behavior this concrete behavior refines; its ensures conditions must be kept (E031)
  refs  string_list  -  External references such as issue or document URIs
  requires  reference_list  -  Invariants that must hold as preconditions before execution
  satisfies  reference_list  -  Temporal properties this behavior satisfies
  severity  string  -  Impact level if this behavior fails
  status  string  -  Current lifecycle status of this behavior
  sync  string_list  -  Synchronization constraints for execution
  types  reference_list  -  Type definitions used by this behavior
Existing: login, logout, reset_password
Guide:
  Look for public functions in service, handler, or controller layers that represent user-visible operations or business logic. Route handlers (HTTP, gRPC, CLI commands), use-case functions, and domain service methods are strong signals. Map function name to entity ID (snake_case). Extract doc comments or the function's purpose as the contract. If the function validates rules or enforces constraints, those are invariants. If it emits events or messages, those are produces. If it has dedicated test files or test functions, add verify statements. Skip: private helpers, utility functions, test fixtures, generated code, framework boilerplate.
Example:
  behavior example_behavior "Example Title" {
    contract "..."
    abstract true
    category "..."
    consumes [ref_1, ref_2]
  }
