crates/specforge-cli/tests/snapshots/tests__read_views__infer_guide_fx1_human.snap
---
source: crates/specforge-cli/tests/read_views.rs
expression: "normalized_text(&run.stdout, root)"
---
feature (@specforge/product): A user-facing capability that solves a specific problem
  fields: acceptance, contributors, depends_on, description, effort, features, owner, priority, problem*, reason, refs, solution, status, tags, tests
  Look for user-facing capabilities described in product documents, issue trackers, or feature flag configurations. Signals: feature flag definitions; product requirement documents; user stories in README or docs/; GitHub issues labeled 'feature' or 'enhancement'; CHANGELOG entries describing new capabilities; marketing copy describing what users can do. Extract the problem (user pain point) and solution (how the feature addresses it). Fill acceptance with testable completion criteria (e.g., 'User can export CSV in <2s'). Set priority and status from issue labels or project boards. Link depends_on for prerequisite features. Features are user-facing capabilities; for internal technical units of work, use behavior instead. Skip: internal technical improvements, bug fixes, refactoring work.
journey (@specforge/product): A user journey through the product experience
  fields: channels, description, features, flow*, persona, priority, tags
  Look for user workflows, onboarding flows, tutorial sequences, and end-to-end scenarios described in docs or UX artifacts. Signals: user flow diagrams; onboarding guides; tutorial/walkthrough documentation; e2e test scenarios that follow a user path; README 'Getting Started' sections describing multi-step workflows. Each journey should reference a persona and list flow steps in order. Link features exercised during the journey. Link channels used (web, CLI, API). Skip: single-action interactions (those are behaviors), internal system workflows, developer-only processes.
deliverable (@specforge/product): A shippable unit of work with dependencies and milestones
  fields: artifact_type*, contributors, depends_on, description, journeys, milestones, modules, owner, reason, status, tags, version
  Look for independently shippable artifacts: binaries, packages, services, libraries, or documentation bundles. Signals: Cargo.toml/package.json with distinct package names; Dockerfile definitions; CI/CD deployment targets; published npm/crate packages; separate apps in a monorepo (apps/ directory); versioned API specifications. Set artifact_type (cli, service, library, web_app, api, etc.). Link modules it contains and milestones it's tracked under. Link depends_on for build or runtime dependencies between deliverables. Skip: internal modules (those are modules), test utilities, development-only tooling.
milestone (@specforge/product): A significant project checkpoint with tracked progress
  fields: behaviors, blockers, contributors, depends_on, description, exit_criteria, features, modules, owner, priority, reason, refs, start_date, status, tags, target_date
  Look for project phases, release planning checkpoints, and grouped sets of work with target dates. Signals: GitHub milestones; project board columns representing phases; roadmap documents with dated targets; sprint/iteration boundaries; 'Phase 1/2/3' labels; release planning documents. Extract target_date, exit_criteria, and status. Link features that must be delivered and modules scoped to this milestone. Link depends_on for sequential milestone ordering. Skip: individual tasks (those are features or behaviors), recurring ceremonies, ongoing maintenance work.
module (@specforge/product): A logical grouping of related features and behaviors
  fields: depends_on, description, family, features, ports, ports_defined, reason, tags
  Look for logical boundaries in the codebase: bounded contexts, packages, crates, or top-level directories that group related functionality. Signals: top-level directories in src/ (e.g., src/auth/, src/billing/); Cargo workspace members; Go packages; separate npm workspaces; DDD bounded contexts; module declarations in architecture docs. Set family for higher-level grouping (e.g., 'core', 'platform', 'integration'). Link features contained in this module and depends_on for inter-module dependencies. Modules are logical groupings of features; for shippable artifacts, use deliverable instead. Skip: pure utility directories with no domain cohesion, test directories, build tooling.
term (@specforge/product): A glossary entry defining domain-specific vocabulary
  fields: aliases, context, definition*, module, see_also, tags
  Look for domain-specific vocabulary that team members need to agree on. Signals: glossary sections in docs; comments explaining domain jargon; type/struct names that embed domain concepts; README sections defining terminology; onboarding docs explaining project vocabulary; code comments like 'in our context, X means...'. The definition field should be precise and unambiguous. Add aliases for abbreviations or alternative names. Link see_also for related terms and module for the bounded context that owns the term. Skip: standard programming terms, framework concepts, widely-known acronyms.
persona (@specforge/product): A user archetype representing a target audience segment
  fields: description*, goals, key_features, pain_points, reason, status, tags, technical_level
  Look for distinct user archetypes referenced in product docs, user stories, or access control systems. Signals: role-based access control definitions (admin, editor, viewer); user story formats ('As a <persona>...'); docs/personas/ directory; marketing segments; README describing who the product is for; distinct CLI/API user types. Extract technical_level, goals, and pain_points. Link key_features this persona cares about. One persona per distinct user archetype with meaningfully different needs. Skip: system/service accounts, test users, internal roles that don't represent real users.
channel (@specforge/product): A communication or distribution channel for the product
  fields: description*, interaction_model, reason, status, tags, url
  Look for distinct surfaces through which users interact with the product. Signals: separate frontend applications (web app, mobile app, CLI); API endpoints exposed to external consumers; notification channels (email, push, SMS); documentation sites; IDE extensions; webhook integrations; Slack/Discord bots. Set interaction_model (sync, async, push, pull). Set url if applicable. One channel per distinct interaction surface. Skip: internal communication between services (those are ports), monitoring/alerting channels, CI/CD pipelines.
release (@specforge/product): A versioned product release bundling deliverables
  fields: changelog, contributors, deliverables, depends_on, description, milestones, owner, reason, refs, release_date, status, tags, target_date, version*
  Look for versioned release artifacts, changelogs, and release planning documents. Signals: CHANGELOG.md entries; GitHub releases; git tags following semver; release branches (release/v*); Cargo.toml/package.json version fields; release notes documents; deployment manifests with version numbers. Set version (semver), target_date, and status. Link deliverables included and milestones completed by this release. Skip: pre-release/nightly builds (unless formally tracked), hotfix patches (unless they warrant a release entity), internal development versions.
behavior (@specforge/software): A testable unit of system functionality with a defined contract
  fields: abstract, category, consumes, contract*, description, diagnostic, ensures, features, invariants, maintains, ports, produces, refines, refs, requires, satisfies, severity, status, sync, types
  Look for public functions in service, handler, or controller layers that represent user-visible operations or business logic. Route handlers (HTTP, gRPC, CLI commands), use-case functions, and domain service methods are strong signals. Map function name to entity ID (snake_case). Extract doc comments or the function's purpose as the contract. If the function validates rules or enforces constraints, those are invariants. If it emits events or messages, those are produces. If it has dedicated test files or test functions, add verify statements. Skip: private helpers, utility functions, test fixtures, generated code, framework boilerplate.
invariant (@specforge/software): A system-wide constraint that must always hold true
  fields: description, expression, guarantee*, refs, risk
  Look for assertions, validation logic, and defensive checks that enforce system-wide rules. Signals: assert!() / assert_eq!() statements, guard clauses that panic or return errors, database constraints (UNIQUE, CHECK, NOT NULL), middleware that rejects invalid state, config validation at startup, and comments like 'must always', 'never allow', 'invariant'. The guarantee field should state what must hold (e.g., 'User email must be unique across all accounts'). The risk field describes consequences of violation. Invariants are architectural rules about state; for quantified limits (latency <200ms, max connections), use constraint instead. Skip: local variable checks, input validation that's behavior-specific, temporary debug assertions.
event (@specforge/software): A significant occurrence in the system that triggers reactions
  fields: category, channel, channel_type, contract, description, follows_protocol, participates_in, payload, refs, sync
  Look for message types, event classes, pub/sub topics, webhook payloads, and signal/notification patterns. Signals: structs/classes named *Event, *Message, *Notification; message queue topic/channel definitions; emit()/publish()/dispatch()/notify() calls; event handler registrations (on_*, handle_*); webhook payload schemas. Map the event name to entity ID. If it carries structured data, reference the payload type. Identify which behaviors produce and consume each event. Skip: internal method calls, logging statements, framework lifecycle callbacks (unless domain-meaningful).
type (@specforge/software): A data structure or domain model definition
  fields: composed_types, description, extends, fields, kind, refs
  Look for domain model structs, data transfer objects, API request/response shapes, database entities, and enum definitions that carry business meaning. Signals: struct/class definitions in models/ or domain/ directories; TypeScript interfaces/types for API contracts; protobuf/GraphQL/JSON Schema type definitions; ORM model classes; enum types with business variants. Use open_fields to list the type's fields. Set kind field to 'struct', 'enum', 'alias', or 'opaque'. Reference composed_types for nested or referenced types. Skip: internal implementation structs, builder patterns, framework-generated types, test fixtures.
port (@specforge/software): An interface boundary between system components
  fields: category, description, direction*, methods, refs, types
  Look for trait definitions, abstract classes, interface declarations, and adapter patterns that define boundaries between system layers. Signals: Rust traits in ports/ or interfaces/ directories; TypeScript/Java interfaces for repositories, gateways, or external services; abstract base classes; dependency injection interfaces; API client contracts. Set direction to 'inbound' (receives requests), 'outbound' (calls external systems), or 'bidirectional'. Use open_fields/methods to list the port's operations. Set category to 'http', 'grpc', 'database', 'queue', 'filesystem', etc. Skip: internal module boundaries, utility traits (Display, Debug), marker traits, framework-imposed interfaces.
property (@specforge/formal): A temporal property assertion (safety, liveness, fairness)
  fields: description, expression*, property_type*, refs, scope
  Look for system-wide temporal guarantees that must hold across all executions. Signals: safety properties ('X never happens'), liveness properties ('Y eventually happens'), fairness properties ('if X is requested, it is eventually granted'); invariants that span multiple behaviors; global ordering guarantees; eventual consistency promises; progress guarantees. Set property_type to 'safety', 'liveness', or 'fairness'. The expression field should state the property formally or semi-formally. Skip: local function postconditions (those are invariants), single-behavior contracts.
axiom (@specforge/formal): An assumed-true foundational assertion
  fields: assumes, description, expression*, justification, refs
  Look for foundational assumptions the system relies on without proving them. Signals: comments stating 'we assume', 'given that', 'prerequisite'; environment assumptions (e.g., 'clock is monotonic', 'network is eventually connected'); trust boundaries ('upstream service guarantees X'); mathematical axioms in algorithm implementations; configuration assumptions that must hold for correctness. The expression field states what is assumed. Add justification explaining why the assumption is safe. Link assumes to invariants the axiom supports. Skip: derived properties (those are properties), things the system proves/enforces itself.
protocol (@specforge/formal): A shared synchronization contract between processes
  fields: alphabet*, description, initial_state*, refs, states, transitions
  Look for multi-party interaction patterns with defined message sequences and state machines. Signals: handshake sequences (connect/auth/ready); transaction protocols (begin/commit/rollback); consensus algorithms; leader election protocols; retry/backoff protocols with defined states; connection lifecycle state machines; API versioning/negotiation protocols. Define alphabet (set of events), states, transitions, and initial_state. One protocol per distinct coordination pattern shared between processes. Skip: single-party state machines (those are processes), simple request-response patterns, stateless interactions.
refinement (@specforge/formal): A mapping from abstract to concrete specification
  fields: abstract_entity*, chains_to, concrete_entity*, description, invariant_deltas, refs
  Look for abstract-to-concrete implementation mappings where a high-level specification is progressively detailed. Signals: abstract base classes with concrete implementations; interface + implementation pairs where the implementation adds constraints; layered architectures where higher layers define contracts and lower layers fulfill them; strategy patterns; template method patterns. Link abstract_entity to the high-level behavior and concrete_entity to the implementation. List invariant_deltas for constraints added or relaxed. Chain refinements with chains_to for multi-step refinement. Skip: simple inheritance, polymorphism without specification changes.
process (@specforge/formal): A CSP-style communicating process with states and transitions
  fields: alphabet*, composition, description, initial_state*, refs, states, sub_processes
  Look for long-running stateful components that communicate via events and have defined lifecycles. Signals: actor/agent implementations; background workers with state machines; sagas/orchestrators with defined steps; finite state machines in code; async task pipelines; microservice interaction patterns with defined communication channels. Define alphabet (events it sends/receives), states, initial_state, and composition (parallel, sequential, choice). Link sub_processes for composed processes. Skip: stateless request handlers (those are behaviors), simple event handlers, one-shot tasks.

Spec directory: spec/
